# yolo_ros2_following

./: .gitignore  LICENSE  README.md
yolo/yolo_bringup/launch/: yolo.launch.py
yolo/yolo_msgs/: CMakeLists.txt
yolo/yolo_msgs/msg/: Detection.msg
yolo/yolo_ros/: setup.py
yolo/yolo_ros/yolo_ros/: debug_node.py  tracking_node.py  yolo_node.py
yolo_feintuning/: README.md  adjust_class_IDs.py  downlaodDataset3Calsses.py
yolo_feintuning/results/: make_gifs.sh
yolo_feintuning/results/train/feinTuned_yolov8n_100_epochs/: args.yaml  results.csv
yolo_feintuning/results/train/feinTuned_yolov8n_10_epochs/: args.yaml  results.csv
yolo_feintuning/results/train/feinTuned_yolov8n_150_epochs/: args.yaml  results.csv
yolo_feintuning/results/train/feinTuned_yolov8n_200_epochs/: args.yaml  results.csv
yolo_feintuning/results/train/feinTuned_yolov8n_25_epochs/: args.yaml  results.csv
yolo_feintuning/results/train/feinTuned_yolov8n_50_epochs/: args.yaml  results.csv
yolo_feintuning/results/train/feinTuned_yolov8n_75_epochs/: args.yaml  results.csv
yolo_feintuning/scripts/: yolo_predict.py  yolo_train.py  yolo_valid.py
yolo_ros2_interaction/: README.md  package.xml  setup.cfg  setup.py
yolo_ros2_interaction/config/: usb_cam.yaml  web_cam.yaml
yolo_ros2_interaction/launch/: ball_follower_node.launch.py  camera.launch.py  yolo_ros2_interaction_bringup.launch.py
yolo_ros2_interaction/msg/: BoundingBox2D.msg  Detection.msg  DetectionArray.msg  Pose2D.msg
yolo_ros2_interaction/yolo_ros2_interaction/: ball_follower_node.py  camera_node.py
